[package]
name = "bleps"
version = "0.1.0"
edition = "2021"
authors = ["Bjoern Quentin <bjoern.quentin@mobile-j.d>"]
description  = "HCI BLE peripheral stack"
repository   = "https://github.com/bjoernQ/bleps"
license      = "MIT OR Apache-2.0"

keywords = [
    "no-std",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]
log = "0.4.16"
embedded-io = { version = "0.4.0", features = ["async"] }
futures = { version = "0.3", default-features = false, optional = true }
critical-section = { version = "1.0.1", optional = true }
bleps-macros = { path = "../bleps-macros", optional = true }

[dev-dependencies]
env_logger = "0.10.0"

[features]
async = [ "embedded-io/async", "dep:futures", "dep:critical-section" ]
macros = [ "bleps-macros" ]
