[package]
name = "bleps"
version = "0.1.0"
edition = "2021"
authors = ["Bjoern Quentin <bjoern.quentin@mobile-j.d>"]
description  = "HCI BLE peripheral stack"
repository   = "https://github.com/bjoernQ/bleps"
license      = "MIT OR Apache-2.0"

keywords = [
    "no-std",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]
log = "0.4.16"
embedded-io-blocking = { package = "embedded-io", version = "0.5.0" }
embedded-io-async = { version = "0.5.0", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
critical-section = { version = "1.0.1", optional = true }
defmt = {version = "0.3", optional = true }
bleps-macros = { path = "../bleps-macros", optional = true }

[dev-dependencies]
env_logger = "0.10.0"

[features]
async = [ "dep:embedded-io-async", "dep:futures", "dep:critical-section" ]
macros = [ "bleps-macros" ]
defmt = [ "dep:defmt" ]
