[package]
name = "esp32s3_serial_hci"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3

[dependencies]
esp32s3-hal = "0.9.0"
esp-backtrace = { version = "0.7.0", features = ["esp32s3", "panic-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = [ "esp32s3", "log" ] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "dad30df82aabc76e81c341845f260d5049e0f304", features = ["esp32s3", "ble"] }
embedded-io = "0.4.0"
log = "0.4.17"
