[package]
name = "esp32s3_serial_hci"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3

[dependencies]
esp32s3-hal = "0.13.0"
esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "print-uart"] }
esp-println = { version = "0.7.1", features = [ "esp32s3", "log" ] }
esp-wifi = { version = "0.1.1", features = ["esp32s3", "ble"] }
embedded-io-blocking = { package = "embedded-io", version = "0.6.1" }
log = "0.4.17"
