[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2.0"
critical-section = "1.1.1"
embedded-io-adapters = { version = "0.6.1", features = ["std"] }
embedded-io-blocking = { package = "embedded-io", version = "0.6.1" }
bleps = { path = "../bleps", features = ["macros", "async", "crypto"] }
env_logger = "0.10.0"
crossterm = "0.27.0"
rand_core = { version = "0.6.4", features = ["std"] }
